# opensource-resources

./: .gitmodules  README.md  history
ebook/ebook-programming/: README.md
info/: INFO.md
konsep-penting-pemrograman/konsep-penting/: README.md
konsep-penting-pemrograman/konsep-penting/konsep-penting-clang/: konsep-penting-clang.md
projects/mukharomdev-backend/: .env-example  nodemon.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
projects/mukharomdev-backend/_posts/: tutorial-hooks.md
projects/mukharomdev-backend/src/: index.ts
projects/mukharomdev-backend/src/config/: index.ts
projects/mukharomdev-backend/src/controllers/: index.ts
projects/mukharomdev-backend/src/database/: index.s
projects/mukharomdev-backend/src/interfaces/: index.ts
projects/mukharomdev-backend/src/libraries/: index.ts
projects/mukharomdev-backend/src/middlewarers/: index.ts
projects/mukharomdev-backend/src/models/: index.ts
projects/mukharomdev-backend/src/repositories/: index.ts
projects/mukharomdev-backend/src/routes/: index.ts
projects/mukharomdev-backend/src/services/: index.ts
projects/mukharomdev-backend/src/utils/: index.ts
tutorial/Java/: pom.xml
tutorial/bash-tutorial/: bash.txt  execute.sh  global-local.sh  id-else.sh  setup.sh
tutorial/devops-tutorial/docker/command/: docker-container.sh  docker-image.sh  docker.sh
tutorial/markdown-tutorial/: README.md
tutorial/meson-clang/: .gitignore  README.md  meson.build
tutorial/meson-clang/include/: main.h
tutorial/meson-clang/src/: main.c  meson.build  thread.c
tutorial/meson-cpp-tutorial/: .gitignore  README.md  clean.sh  command-mason.txt  config.h.in  meson.build
tutorial/meson-cpp-tutorial/include/: main.h  meson.build
tutorial/meson-cpp-tutorial/include/basic/: basic.h
tutorial/meson-cpp-tutorial/include/oop/: oop.h
tutorial/meson-cpp-tutorial/src/: main.cc  meson.build
tutorial/meson-cpp-tutorial/src/basic/: meson.build  template.cc  variable.cc
tutorial/meson-cpp-tutorial/src/oop/: class.cc  meson.build
